# WebApplicationByHaskell

CabalSample/: CHANGELOG.md  myFirstApp.cabal
CabalSample/app/: Main.hs
CabalSample/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
CheckProject/: ChangeLog.md  CheckProject.cabal  README.md  package.yaml
CheckProject/app/: Main.hs
