cabal-version:      3.6
name:               myFirstApp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             AsadaGuitar
maintainer:         79627592+AsadaGuitar@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable myFirstApp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        haskell-say ^>=1.0.0.0,
        bytestring ^>=0.11.1.0,
        utf8-string ^>=1.0.2,
        wai,
        warp,
        http-types
    hs-source-dirs:   app
    default-language: Haskell2010
